# snowtrail

./: .gitignore  .prettierrc.cjs  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yaml  release.yaml
components/common/: Title.tsx
frontend/: package.json  tsconfig.json
frontend/components/common/: LinkCard.tsx
frontend/pages/: _document.tsx  index.tsx
src/: App.tsx  main.rs  main.tsx
src-tauri/: init.rs  main.rs  sysmenu.rs
src-tauri/command/: data.rs  dataround.rs  event.rs  eventstat.rs  feed.rs  git.rs  localfiles.rs  logs.rs  mod.rs  note.rs  project.rs  publish.rs  publisher.rs  rule.rs  script.rs  scripts.rs  setting.rs  subscribe.rs  subscriber.rs  surreal.rs  workspace.rs
src-tauri/commands/: event.rs  feed.rs  git.rs  greet.rs  localfiles.rs  mod.rs  person.rs  runls.rs  surreal.rs
src-tauri/repository/: command.rs  container.rs  docker.rs  fs.rs  mod.rs  redis.rs  repository.rs  rocks.rs  runcommand.rs  surreal.rs
src-tauri/service/: binding.rs  crud.rs  dataround.rs  event.rs  feed.rs  git.rs  githistories.rs  mod.rs  project.rs  runner.rs  script.rs  shell.rs  subscribe.rs  surreal_management.rs  withid.rs  workspace.rs
src-tauri/services/: event.rs  git.rs  mod.rs  person.rs  surreal.rs
src-tauri/usecase/: app.rs  mod.rs  tryasync.rs
src/commands/: data.ts  dataround.ts  event.ts  git.ts  greet.ts  main.ts  poject.ts  publish.ts  script.ts  setting.ts  subscribe.ts  use.ts  workspace.ts
src/components/common/: Checkbox.tsx  Header.css.ts  Header.tsx  Layout.tsx  Link.tsx  Main.tsx  PageSubTitle.tsx  PageTitle.tsx  TextInput.tsx
src/components/event/: Dashboard.tsx  Detail.tsx  TopEventDashboard.tsx  TopEventDashboardItem.tsx
src/lib/: logs.ts  scripts.ts
src/pages/: _app.tsx  git.tsx  index.tsx  localfiles.tsx  projects.tsx  publisher.tsx  setting.tsx  settings.tsx  subscribes.tsx  workspace.tsx
src/states/: event.ts  feed.ts  git.ts  greet.ts  localfiles.ts  runls.ts  surreal.ts  type.ts  usefetch.ts
src/styles/: app.css.ts  emotion.d.ts  global.ts  theme.ts  use.ts
styles/: global.ts
(+74 files in other folders)
