[lib]
crate-type = ["bin"]
path = "src-tauri/main.rs"

[package]
name = "snowtrail-app"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", branch = "dev" }
objc = "0.2.7"
reqwest = { version = "0.11.15", features = ["json"] }
rocksdb = "0.20.1"
rs-docker = "0.0.60"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tauri = { version = "1.2.4", features = ["api-all"] }
tokio = { version = "1.26.0", features = ["full"] }
uuid = "1.3.0"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"] # tauti uses this feature internally.
