[lib]
crate-type = ["bin"]
path = "src-tauri/main.rs"

[package]
name = "snowtrail"
version = "0.0.1"
edition = "2021"

[dependencies]
dirs = "5.0.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", branch = "dev" }
objc = "0.2.7"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tauri = { version = "1.5", features = [ "system-tray", "api-all"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"] # tauti uses this feature internally.
