[lib]
crate-type = ["bin"]
path = "src-tauri/main.rs"

[package]
name = "snowtrail"
version = "0.0.3"
edition = "2021"

[dependencies]
chrono = "0.4.33"
dirs = "5.0.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", branch = "dev" }
objc = "0.2.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
tauri = { version = "1.5.4", features = ["system-tray", "api-all"] }
tokio = { version = "1.35.1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"] # tauti uses this feature internally.
